# project-EGEsnake

./: readme.md  项目汇报(非自愿做pre).pptx
map/: chess.snakemap  empty.snakemap  house.snakemap  nju.snakemap  地图规约.txt
src/: CMakeLists.txt  head.h  main.cpp  others.cpp  others.h  paint.cpp  paint.h  play.cpp  play.h  structs.cpp  structs.h
